Fix Png and Sizing

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ twitter_username: shuckproduction
 facebook_username: shuckproduction
 instagram_username: shuckproduction
 youtube_channel_id: UCVyJVvAwP48xrcMMCfANnyA
+vimeo_username: "shuckproductions"
+flickr_username: "photos/jordan-shuck/albums"
 mail_address: 'productions@shuck.org.uk'
 
 
